--- a/.editorconfig
+++ b/.editorconfig
@@ -36,6 +36,16 @@ indent_size = 2
 end_of_line = lf
 indent_size = 2
 
+# Verify settings
+[*.{received,verified}.{json,txt,xml}]
+charset = "utf-8-bom"
+end_of_line = lf
+indent_size = unset
+indent_style = unset
+insert_final_newline = false
+tab_width = unset
+trim_trailing_whitespace = false
+
 # Dotnet code style settings:
 [*.{cs,vb}]
 
