--- a/tests/DBase.Tests/DBase.Tests.csproj
+++ b/tests/DBase.Tests/DBase.Tests.csproj
@@ -8,10 +8,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="DBase02\DBase02.dbf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="DBase02\DBase02.dbf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DBase03\DBase03.dbf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="CsvHelper" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Verify.DiffPlex" />
+    <PackageReference Include="Verify.Xunit" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\DBase\DBase.csproj" />
   </ItemGroup>
 
   <ItemGroup>
