Refactor DbfReader and enhance version handling
- Updated DbfReader to use a clearer Stream variable `_dbf`.
- Refactored ReadHeader and ReadDescriptors for better version handling.
- Added GetDbfVersion and GetDbfTableFlags methods in DbfWriter.
- Introduced DbfVersionExtensions for easier version checks.
- Renamed Verify method to VerifyReader in DbfTest for clarity.
- Updated DBase.Tests.csproj to include .dbt files in output.

--- a/tests/DBase.Tests/DBase.Tests.csproj
+++ b/tests/DBase.Tests/DBase.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <Content Include="**\*.dbf" CopyToOutputDirectory="PreserveNewest" Link="%(RecursiveDir)\%(Filename)%(Extension)" />
+    <Content Include="**\*.dbt" CopyToOutputDirectory="PreserveNewest" Link="%(RecursiveDir)\%(Filename)%(Extension)" />
   </ItemGroup>
 
   <ItemGroup>
