--- a/src/DBase/DBase.csproj
+++ b/src/DBase/DBase.csproj
@@ -7,4 +7,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNext.IO" />
+  </ItemGroup>
+
 </Project>
