Support dBase version 83 (memo files) (#3)
* Refactor DBF structures and enhance file handling

- Changed `DbfFieldDescriptor` and `DbfFieldDescriptor02` to `readonly record struct` for improved immutability and value-based equality.
- Introduced `DbfMemoHelper` for efficient string handling in memo files using `ArrayPool`. Not used yet.
- Renamed values in `DbfVersion` enum for clarity.
- Enhanced `DbfWriter` to write headers based on DBF version with better memory management.
- Modified `DbfHeader02` to use `init` accessors for properties.
- Updated `DBase.Tests.csproj` to include all `.dbf` files recursively.
- Added verified header file for `DBase83` and created a new test class for it.

* Refactor DbfReader and enhance version handling

- Updated DbfReader to use a clearer Stream variable `_dbf`.
- Refactored ReadHeader and ReadDescriptors for better version handling.
- Added GetDbfVersion and GetDbfTableFlags methods in DbfWriter.
- Introduced DbfVersionExtensions for easier version checks.
- Renamed Verify method to VerifyReader in DbfTest for clarity.
- Updated DBase.Tests.csproj to include .dbt files in output.

* Rename methods and constants for clarity

Updated `DbfReader` to rename `Read` to `ReadRecords` for better clarity.
Modified `DbfWriter` to use `HeaderLengthInDisk` instead of `HeaderLength` for accurate stream position checks.
Renamed `HeaderLength` to `HeaderLengthInDisk` in `DbfHeader02` to better reflect its purpose, including updates in the implicit conversion operator.

* Add support for reading .dbt files.

- Implemented `VerifyMemo()` test method for `.dbt` file verification.
- Created `DbtHeader` struct for managing `.dbt` file headers.
- Added `DbtReader` class for reading `.dbt` files.
- Defined `DbtRecord` struct for representing records from `.dbt`.

--- a/tests/DBase.Tests/DBase.Tests.csproj
+++ b/tests/DBase.Tests/DBase.Tests.csproj
@@ -8,16 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="DBase02\DBase02.dbf" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="DBase02\DBase02.dbf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="DBase03\DBase03.dbf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="**\*.dbf" CopyToOutputDirectory="PreserveNewest" Link="%(RecursiveDir)\%(Filename)%(Extension)" />
+    <Content Include="**\*.dbt" CopyToOutputDirectory="PreserveNewest" Link="%(RecursiveDir)\%(Filename)%(Extension)" />
   </ItemGroup>
 
   <ItemGroup>
