Add FoxPro (wip).
This commit introduces support for handling FoxPro and FPT files in the Dbf class, including new properties and methods for managing FPT records alongside existing DBF and DBT records. A new Fpt class is added to encapsulate functionality related to FPT files, including methods for opening, creating, and writing headers.

Additionally, a new DbfFieldFlags enum is introduced to represent various field flags, and the DbfFieldDescriptor struct is updated to include a Flags property. Refactored methods for reading and writing various field types, including binary and blob types, are also added.

Tests for the new FPT functionality are included, although failing and project files are updated to ensure FPT files are included in the output directory. Various improvements for performance and readability are made, utilizing Span<T> and MemoryMarshal for efficient memory handling, along with added comments and documentation for clarity.

--- a/tests/DBase.Tests/DBase.Tests.csproj
+++ b/tests/DBase.Tests/DBase.Tests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Content Include="**\*.dbf" CopyToOutputDirectory="PreserveNewest" Link="%(RecursiveDir)\%(Filename)%(Extension)" />
     <Content Include="**\*.dbt" CopyToOutputDirectory="PreserveNewest" Link="%(RecursiveDir)\%(Filename)%(Extension)" />
+    <Content Include="**\*.fpt" CopyToOutputDirectory="PreserveNewest" Link="%(RecursiveDir)\%(Filename)%(Extension)" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,10 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="DBase30\DBase30.dbf" Link="DBase30\DBase30.dbf" />
   </ItemGroup>
 
 </Project>
