Updates to xunit.v3.
- Skip tests when associated files do not exist.

--- a/tests/DBase.Tests/DBase.Tests.csproj
+++ b/tests/DBase.Tests/DBase.Tests.csproj
@@ -14,13 +14,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" />
+    <PackageReference Include="coverlet.collector">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="CsvHelper" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="Verify.DiffPlex" />
-    <PackageReference Include="Verify.Xunit" />
-    <PackageReference Include="xunit" />
-    <PackageReference Include="xunit.runner.visualstudio" />
+    <PackageReference Include="Verify.XunitV3" />
+    <PackageReference Include="xunit.runner.visualstudio">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="xunit.v3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +39,7 @@
 
   <ItemGroup>
     <Content Update="DBase30\DBase30.dbf" Link="DBase30\DBase30.dbf" />
+    <Content Update="DBase31\DBase31.dbf" Link="DBase31\DBase31.dbf" />
   </ItemGroup>
 
 </Project>
