--- a/.editorconfig
+++ b/.editorconfig
@@ -36,8 +36,8 @@ indent_size = 2
 end_of_line = lf
 indent_size = 2
 
-# Verify settings
-[*.{received,verified}.{json,txt,xml}]
+# Verify
+[*.{received,verified}.{csv,txt}]
 charset = "utf-8-bom"
 end_of_line = lf
 indent_size = unset
