Add support for Visual Fox Pro with Variant fields.
- Updated `DbfFieldDescriptor` to include `Offset`, `Flags`,
  `AutoIncrementNextValue`, and `AutoIncrementStepValue`
  properties, while removing obsolete fields.

- Introduced `Variant` type in `DbfFieldType` enum and added
  `VisualFoxProWithVarchar` to `DbfVersion` enum.

- Refactored `DbfHelper` to use `ImmutableArray` for better
  memory management and streamlined descriptor reading.

- Added methods for reading and writing `Variant` fields.

- Updated project files to include `DBase32.dbf` and created
  a new test class for this version.

- Added verification files to ensure correct header and record
  reading for the new DBF format.

--- a/tests/DBase.Tests/DBase.Tests.csproj
+++ b/tests/DBase.Tests/DBase.Tests.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Content Update="DBase30\DBase30.dbf" Link="DBase30\DBase30.dbf" />
     <Content Update="DBase31\DBase31.dbf" Link="DBase31\DBase31.dbf" />
+    <Content Update="DBase32\DBase32.dbf" Link="DBase32\DBase32.dbf" />
   </ItemGroup>
 
 </Project>
