--- a/tests/DBase.Tests/DBase.Tests.csproj
+++ b/tests/DBase.Tests/DBase.Tests.csproj
@@ -41,6 +41,8 @@
     <Content Update="DBase30\DBase30.dbf" Link="DBase30\DBase30.dbf" />
     <Content Update="DBase31\DBase31.dbf" Link="DBase31\DBase31.dbf" />
     <Content Update="DBase32\DBase32.dbf" Link="DBase32\DBase32.dbf" />
+    <Content Update="DBase8b\DBase8b.dbf" Link="DBase8b\DBase8b.dbf" />
+    <Content Update="DBase8b\DBase8b.dbt" Link="DBase8b\DBase8b.dbt" />
   </ItemGroup>
 
 </Project>
