--- a/src/DBase/DBase.csproj
+++ b/src/DBase/DBase.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNext.IO" />
+    <PackageReference Include="Humanizer.Core" />
   </ItemGroup>
 
 </Project>
